Wed Dec 30 13:21:14 GMT 2009  Richard Boulton <richard@tartarus.org>

	* libs/get_xapian.py: New xapian packages.  Includes performance
	  improvement for replace_document() when few changes have been
	  made to a document.

Wed Dec 30 12:20:46 GMT 2009  Richard Boulton <richard@tartarus.org>

	* utils/make_xappy_tarballs: Update branchpoints.

Tue Dec 15 18:42:13 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cachemanager/generic.py: Fix bug with facets for search
	  with cached hits - was always trying to use cached facets, too.

Tue Dec 15 18:40:42 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/unittests/cached_searches.py: Add tests of getting facets
	  from cached searches.

Tue Dec 15 16:42:10 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cache_search_results.py: Remove old parameter from
	  get_suggested_facets().

Tue Dec 15 16:09:04 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cache_search_results.py,xappy/mset_search_results.py,
	  xappy/searchconnection.py: Remove CacheResultStats and
	  MSetResultStats - replace them with a generic ResultStats which
	  takes both the mset and the cached value, and returns the cached
	  values if not None, and reads the mset otherwise.  Adjust the
	  search code to perform the search if any of the cached values are
	  None.
	* xappy/unittests/cached_searches.py: Minimal test for stats return
	  values.

Tue Dec 15 16:08:23 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cachemanager/generic.py: Revert previous fix to stats
	  storage, but also don't store anything if all stats are None.

Tue Dec 15 14:14:27 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cachemanager/generic.py: Return None if no stats, instead
	  of (None, None, None).

Tue Dec 15 14:12:03 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/searchconnection.py: Update a couple of comments.

Tue Dec 15 09:56:56 GMT 2009  Richard Boulton <richard@tartarus.org>
